[package]
name = "custom_background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
winit = { version = "0.26", features = ["x11"] }
bytemuck = { version = "1.4", features = ["derive"] }
rand = "0.8"
glam = { version = "0.20", features = ["bytemuck", "rand"] }
env_logger = "0.9"
pollster = "0.2"
